@@ -1,0 +1,11 @@
+#! confdata 1
+# conference-name conference-date dead-line notification
+#
+# ex
+# SPM2007	2007/06/04-2007/06/06 	2006/11/01	Tsinghua, China
+#
+SIGGASIA	2010/12/15-2010/12/18	2010/05/11      2010/10/01
+HPG2010	        2010/06/25-2010/06/27	2010/04/09      <unknown>
+HAHA2010	2010/06/28-2010/07/02	2010/03/01      2010/05/10
+EGSR2010	2010/06/28-2010/06/28	2010/04/10      2010/05/01
+TEST2010	2011/02/28-2011/03/05	2010/06/08      2011/01/01
