@@ -1,5 +1,13 @@
 This is ChangeLog: draw_conf_schedule.rb
 
+2010-06-13  Yamauchi, Hitoshi
+
+	* (draw_conf_schedule.rb) change default value of switch
+	notification date, default is on. According to my friends votes.
+
+	* (draw_conf_schedule.rb) Fixed marker overrides date
+	problem. Found by Leonhard Gruenschloss.
+
 2010-06-10  Yamauchi, Hitoshi
 
 	* (draw_conf_schedule.rb) Added month name option. Suggested by
